# accidents_routiers

./: .dockerignore  .env.api.example  .env.db.example  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMPARATIF_OUTILS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  release.yml  sync-develop.yml
api/: Dockerfile  database.py  main.py  model.py  requirements.txt  schemas.py
docs/brief/: PHASE3_CI_PIPELINE.md  VEILLE_CICD.md
docs/rendus/: COMPARATIF_OUTILS.md  PHASE2_STRATEGIE_GIT.md  PLAN.md  PROBLEMES_DETECTES.md  SYNTHESE_PROJET.md
frontend/: Dockerfile  Dockerfile.dockerignore  app.py  requirements.txt
frontend/pages/: dashboard.py  prediction.py
frontend/utils/: config.py  data.py
models/: dep_mapping.json  feature_names_UC1.json  metadata_UC1.json  metadata_UC1_api.json  model_UC1_final.joblib  model_UC1_v1_base.joblib  model_UC1_v2_route.joblib  model_UC1_v3_vehicules.joblib  model_UC1_v4_collision.joblib
notebooks/01_exploration/: 01_exploration.ipynb
notebooks/02_analyse_baseline/: 02a_preparation_complete.ipynb  02b_analyse_complete.ipynb
notebooks/03_feature_engineering/: 03a_features_intelligentes.ipynb
notebooks/04_datasets/UC1_secours/: 04a_dataset_UC1.ipynb
notebooks/04_datasets/UC2_epidemio/: 04b_dataset_UC2.ipynb
notebooks/05_modelisation/: 05a_model_UC1_secours.ipynb  05b_model_UC2_epidemio.ipynb
notebooks/05_modelisation/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/05_modelisation/catboost_info/learn/: events.out.tfevents
notebooks/05_modelisation/catboost_info/test/: events.out.tfevents
notebooks/archives/: 02_nettoyage.ipynb  03_analyse_structure_donnees.ipynb  03_eda.ipynb  03b_analyse_variables_complete.ipynb
tests/: conftest.py  test_api.py
