[project]
name = "accidents-routiers"
version = "0.1.2"
description = "Prediction de la gravite des accidents routiers a partir des donnees BAAC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
]

[dependency-groups]
api = [
    "catboost>=1.2.8",
    "fastapi[standard]>=0.128.1",
    "joblib>=1.5.3",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
dev = [
    "bandit>=1.9.3",
    "mypy>=1.19.1",
    "pandas-stubs>=2.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "python-semantic-release>=10.5.3",
    "ruff>=0.15.0",
]
frontend = [
    "plotly>=6.5.2",
    "requests>=2.32.5",
    "streamlit>=1.19.0",
]
ml = [
    "catboost>=1.2.8",
    "imbalanced-learn>=0.14.1",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "frontend"]

# ── RUFF ─────────────────────────────────────────────────────────────
[tool.ruff]
exclude = ["notebooks/", "venv/", ".venv/"]
line-length = 88

[tool.ruff.lint]
select = [
    "F",        # Pyflakes : noms indéfinis, imports inutilisés
    "E",        # pycodestyle : erreurs de style PEP 8
    "W",        # pycodestyle : warnings
    "I",        # isort : tri des imports
    "B",        # flake8-bugbear : bugs courants (mutable defaults, etc.)
    "C4",       # flake8-comprehensions : simplification des comprehensions
    "UP",       # pyupgrade : modernisation syntaxe Python 3.13+
    "SIM",      # flake8-simplify : code simplifiable
    "S",        # flake8-bandit : failles de sécurité
    "PT",       # flake8-pytest-style : bonnes pratiques pytest
    "RUF",      # Ruff-specific : pièges Python courants
]
ignore = [
    "E501",     # Ligne trop longue : géré par le formateur
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Autoriser assert dans les tests

[tool.ruff.lint.isort]
known-first-party = ["api", "frontend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ── MYPY ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
exclude = ["notebooks/", "venv/", ".venv/"]
plugins = ["pydantic.mypy"]

# Flags de strictness progressifs
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true

# Imports : strict par défaut, permissif par module
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "catboost.*",
    "joblib.*",
    "plotly.*",
    "streamlit.*",
    "sklearn.*",
    "imblearn.*",
    "lightgbm.*",
    "xgboost.*",
    "seaborn.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

# ── PYTEST + COVERAGE ────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",                          # Résumé des tests non passés
    "--strict-markers",             # Erreur sur markers inconnus
    "--tb=short",                   # Tracebacks courts
    "--cov=api",                    # Couverture du code API
    "--cov-report=term-missing",    # Lignes non couvertes dans le terminal
]

[tool.coverage.run]
source = ["api"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

# ── SEMANTIC RELEASE ────────────────────────────────────────────────
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
commit_message = "chore(release): bump version to {version}"
build_command = ""
tag_format = "v{version}"

[tool.semantic_release.branches.master]
match = "master"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
autoescape = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }
ignore_token_for_push = true

[tool.semantic_release.publish]
upload_to_vcs_release = true
